Pressure tab: added border cement to the pools
Flow tab: updated handle image to be more visible against the brown earth color
Flow tab: Show earth cutaway
Pressure tab: Scene 3: Fixed: block dragging code doesn't have the right scale at full screen
Pressure tab: Made pool background gray and textured like concrete
Water tower tab: Reduce precision in pressure sensor when over the water tower water
Added developer menu items for the dirt color
Pressure tab: added grass for all scenes
Water tower tab: Fixed: units metric/english control should be left justified instead of centered in units box
Water tower tab: Added hose icon
Water Tower tab: added ruler icon
Flow tab: Made font for "dots" checkbox larger
Flow + Water Tower tabs: Fixed: Reset all doesn't reset pause/running state of the clock
Flow + Water Tower tabs: Fixed: Reset all doesn't reset the radio button for slow motion
Pressure tab: Fixed: On the first tab: Reset All doesn't reset the amount of water in the rectangular pool, but does the others.
Flow tab: move the "dots" checkbox vertically up, centering it on the dispenser button
Scene 1: Reworded "1 feet" to "1 foot" and "1 meters" to "1 meter"
Scene 1: Fixed: The grid no longer aligns with the pool
# 0.00.55 (63762) Apr 26, 2012
Scene 1: Improved water height readout formatting
Scene 1: Added input faucet
Scene 2: Trapezoid pool now starts half full
Scene 1: Translated the pool to the left
Scene 1: starts with a half full water basin.
Switched to dynamic model for square pool
Fixed: Text fields don't always clamp to the min/max after user finishes editing
Pressure tab: Translated everything up by 10 pixels to make more room for the drains at the bottom
Added more inset space between the fluid density slider control and the bottom and right edges of the screen
Change to metric for the default in Tab 1, and move metric to 1st radio button
Removed the plant image
Flow tab: Added ruler icon in the control panel
# 0.00.54 (63404) Apr 13, 2012